Support different java versions